Create better shadow on painting

--- a/mega.css
+++ b/mega.css
@@ -68,7 +68,7 @@ h2 {
 
 #painting {
 	background-color: #F7F8E0;
-	box-shadow: 10px 10px 0px #BDBDBD;
+	box-shadow: 27px 15px 10px rgba(189,189,189,0.8);
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 30px;
